# ibc-contract-tutorial

./: .gitignore  Cargo.toml  Makefile  README.md
ibc-call/: Cargo.toml  Makefile  README.md
ibc-call/src/: contract.rs  ibc.rs  lib.rs  msg.rs
ibc-transfer/: Makefile  README.md
ibc-transfer/artifacts/: checksums.txt  checksums_intermediate.txt
ibc-transfer/src/: contract.rs  lib.rs  msg.rs
src/: contract.rs  lib.rs  msg.rs
