[package]
name = "ibc-tutorial"
version = "0.1.0"
authors = ["Coreum"]
edition = "2021"

exclude = [
    "ibc_tutorial.wasm",
    "checksums.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

//this
[dependencies]
cosmwasm-std = { version = "1.2.5", features = ["ibc3"] }
cosmwasm-storage = "1.2.5"
cw-storage-plus = "1.1.0"
cw2 = "1.1.0"
schemars = "0.8.8"
thiserror = { version = "1.0.31" }
cosmwasm-schema = "1.2.6"

//AWSOME
[dependencies]
cosmwasm-std = "1.0.0"
cosmwasm-storage = "1.0.0"
cw-storage-plus = "0.13.2"
cw2 = "0.13.2"
schemars = "0.8.8"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }
coreum-wasm-sdk = { version = "0.1.0" }

//DEV
[dependencies]
cosmwasm-std = "1.3.1"
cosmwasm-storage = "1.3.1"
cw-storage-plus = "1.1.0"
cw2 = "1.1.0"
schemars = "0.8.8"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }
coreum-wasm-sdk = { version = "0.1.3" }